# LeapMouse

./: .gitignore  CMakeLists.txt  LeapMotion.todo  Makefile  README.md
cmake/: FindLeap.cmake
include/: App.hpp  Leap.hpp  Mouse.hpp  Systray.hpp  Util.hpp  Utils.hpp  systray.hpp
src/: App.cpp  Leap.cpp  Mouse.cpp  Systray.cpp  Util.cpp  Utils.cpp  main.cpp  mouse.cpp  systray.cpp
